<resources>
    <string name="app_name">Bicipartes</string>
    <string name="title_activity_menu_navegacion">MenuNavegacion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bicipartes WM</string>
    <string name="nav_header_subtitle">bicipartes.wm@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Productos</string>
    <string name="menu_slideshow">Mapa</string>
    <string name="menu_servicios">Servicios</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hint_nombre">Nombre : </string>
    <string name="hint_marca">Marca : </string>
    <string name="hint_precio">Precio : </string>
    <string name="hint_cantidad">Cantidad : </string>
    <string name="btn_guardar">Guardar </string>
</resources>